--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   --divider:#e2e8f0;
   --inv-row-padding-y:4px;
   --inv-row-padding-x:10px;
+  --modal-sticky-offset:12px;
+  --modal-sticky-chrome:160px;
 }
 *{box-sizing:border-box}
 html,body{margin:0;padding:0;height:100%;min-height:100%;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg);scrollbar-gutter:stable}
@@ -54,8 +56,8 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow-x:hidden;overf
 @media (max-width:768px){
   .inv-modal-body,
   .cons-modal-body{overflow:auto}
-  .inv-modal-body .inv-column:first-child .inv-sublist,
-  .cons-modal-body .inv-column:first-child .inv-sublist{overflow:visible;padding-right:0}
+  .inv-modal-body .inv-column-inventory .inv-sublist,
+  .cons-modal-body .inv-column-inventory .inv-sublist{overflow:visible;padding-right:0}
 }
 @media (min-width:1100px){
   .app-main{min-width:0;padding:36px clamp(32px,5vw,72px)}
@@ -614,10 +616,10 @@ body.card-editor-active #addCard{
 .cons-modal-body .inv-columns{flex:1 1 auto;min-height:0;align-items:stretch}
 .inv-modal-body .inv-column,
 .cons-modal-body .inv-column{min-height:0}
-.inv-modal-body .inv-column:first-child .inv-sublist,
-.cons-modal-body .inv-column:first-child .inv-sublist{flex:1 1 auto;min-height:0;overflow:auto;padding-right:6px}
-.inv-modal-body .inv-column:not(:first-child) .inv-sublist,
-.cons-modal-body .inv-column:not(:first-child) .inv-sublist{overflow:visible}
+.inv-modal-body .inv-column-inventory .inv-sublist,
+.cons-modal-body .inv-column-inventory .inv-sublist{flex:1 1 auto;min-height:0;overflow:auto;padding-right:6px}
+.inv-modal-body .inv-column:not(.inv-column-inventory) .inv-sublist,
+.cons-modal-body .inv-column:not(.inv-column-inventory) .inv-sublist{overflow:visible}
 .modal-actions{padding:12px 16px;border-top:1px solid var(--border);display:flex;justify-content:flex-end;gap:8px}
 .inv-meta{color:var(--muted);font-size:12px}
 .inv-list{display:flex;flex-direction:column;gap:6px}
@@ -643,10 +645,39 @@ body.card-editor-active #addCard{
   .inv-column-inventory{order:1}
 }
 @media (min-width:601px){
+  .inv-modal-body,
+  .cons-modal-body{overflow:visible}
+  .inv-modal-body .inv-column-inventory,
+  .cons-modal-body .inv-column-inventory{
+    display:flex;
+    flex-direction:column;
+    max-height:max(0px,min(calc(92vh - var(--modal-sticky-chrome)),calc(720px - var(--modal-sticky-chrome))));
+  }
+  .inv-modal-body .inv-column-inventory .inv-sublist,
+  .cons-modal-body .inv-column-inventory .inv-sublist{
+    overflow:auto;
+    scrollbar-gutter:stable;
+  }
   .inv-modal-body .inv-columns,
   .cons-modal-body .inv-columns{align-items:flex-start}
   .inv-modal-body .inv-column-equipped,
-  .cons-modal-body .inv-column-equipped{position:sticky;top:12px;align-self:flex-start;z-index:1;background:var(--bg)}
+  .cons-modal-body .inv-column-equipped{
+    position:sticky;
+    top:var(--modal-sticky-offset);
+    align-self:flex-start;
+    z-index:1;
+    background:var(--bg);
+    display:flex;
+    flex-direction:column;
+    max-height:max(0px,min(calc(92vh - var(--modal-sticky-chrome)),calc(720px - var(--modal-sticky-chrome))));
+  }
+  .inv-modal-body .inv-column-equipped .inv-sublist,
+  .cons-modal-body .inv-column-equipped .inv-sublist{
+    flex:1 1 auto;
+    min-height:0;
+    overflow:auto;
+    padding-right:6px;
+  }
 }
 .inv-column-title{font-size:12px;font-weight:700;text-transform:uppercase;letter-spacing:.08em;color:var(--muted)}
 .modal-add{display:flex;flex-wrap:wrap;gap:8px;margin-bottom:12px}
