--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   --open-card-accent:transparent;
   --divider:#e2e8f0;
   --inv-row-padding-y:4px;
-  --inv-row-padding-x:10px;
+  --inv-row-padding-x:8px;
   --modal-sticky-offset:12px;
   --modal-sticky-chrome:160px;
 }
@@ -686,7 +686,7 @@ body.card-editor-active #addCard{
 .modal-add button:hover{background:rgba(26,115,232,.2)}
 
 /* Inventory row styles */
-.inv-row{display:grid;grid-template-columns:minmax(0,1fr) auto;align-items:center;padding:var(--inv-row-padding-y) var(--inv-row-padding-x);border-radius:8px;cursor:pointer;transition:background-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease);column-gap:18px;position:relative;overflow:hidden;min-height:calc(var(--inv-control-height) + var(--inv-row-padding-y) * 2);--inv-control-height:19px;--inv-control-line-height:15px}
+.inv-row{display:grid;grid-template-columns:minmax(0,1fr) minmax(var(--inv-tools-min-width,0px),auto);align-items:center;padding:var(--inv-row-padding-y) var(--inv-row-padding-x);border-radius:8px;cursor:pointer;transition:background-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease);column-gap:14px;position:relative;overflow:hidden;min-height:calc(var(--inv-control-height) + var(--inv-row-padding-y) * 2);--inv-control-height:19px;--inv-control-line-height:15px;--inv-tools-min-width:0px}
 .inv-row::after{content:"";position:absolute;inset:0;background:rgba(37,99,235,.12);opacity:0;pointer-events:none;transition:opacity var(--dur) var(--ease)}
 .inv-row>*{position:relative;z-index:1}
 .modal:not(.editing) .inv-row:not(.static):hover::after{opacity:1}
@@ -719,7 +719,9 @@ body.card-editor-active #addCard{
 .inv-name.consumable-name{display:flex;flex-direction:column;align-items:flex-start;gap:4px;min-width:0}
 .inv-name.consumable-name .cons-primary{display:flex;align-items:center;gap:6px;flex-wrap:nowrap;min-width:0}
 .inv-name.consumable-name .cons-name{display:block;font-weight:600;min-width:0;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;flex:1 1 auto}
-.inv-tools{display:flex;align-items:center;gap:6px;padding:0 var(--inv-row-padding-x)}
+.inv-row.has-entry-link{--inv-tools-min-width:calc(var(--inv-control-height) + 12px)}
+.inv-row.has-qty{--inv-tools-min-width:clamp(96px,28vw,156px)}
+.inv-tools{display:flex;align-items:center;gap:6px;padding:0 var(--inv-row-padding-x);justify-self:end;min-width:0}
 .inv-row .delete-btn{display:none;margin-left:8px}
 .inv-row .icon-btn{width:var(--inv-control-height);height:var(--inv-control-height);padding:0}
 .inv-row .icon-btn svg{width:calc(var(--inv-control-height) - 7px);height:calc(var(--inv-control-height) - 7px)}
@@ -752,25 +754,8 @@ body.card-editor-active #addCard{
 .inventory-context-item:hover,.inventory-context-item:focus-visible{background:#eef4ff;color:var(--primary);outline:none}
 .inventory-context-item[disabled]{color:var(--muted);cursor:default;background:none}
 @media (max-width:600px){
-  .inv-row{
-    --inv-row-padding-y:10px;
-    display:flex;
-    flex-direction:column;
-    align-items:stretch;
-    gap:10px;
-    padding-inline:var(--inv-row-padding-x);
-    min-height:auto;
-    overflow:visible;
-  }
-  .inv-name{align-items:flex-start;gap:6px;flex-wrap:wrap}
-  .inv-name .inv-label{white-space:normal}
-  .inv-row .inv-tools{
-    justify-content:flex-start;
-    width:100%;
-    padding-inline:0;
-    flex-wrap:wrap;
-    gap:6px;
-  }
+  .inv-row{--inv-row-padding-y:6px;column-gap:12px}
+  .inv-row .inv-tools{padding-inline:calc(var(--inv-row-padding-x) - 2px)}
 }
 .qty-icon:hover{color:#1a73e8;transform:translateY(-1px)}
 .qty-icon:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:3px}
@@ -9300,6 +9285,7 @@ function openInventoryModal(charKey, opts={}){
     rightDiv.className='inv-tools';
 
     if(meta && meta.adv){
+      row.classList.add('has-entry-link');
       const linkBtn=createEntryLinkButton({
         onClick:()=>{
           hideInventoryContextMenu();
@@ -9419,6 +9405,7 @@ function openInventoryModal(charKey, opts={}){
     const rightDiv=document.createElement('div');
     rightDiv.className='inv-tools';
     if(meta && meta.adv){
+      row.classList.add('has-entry-link');
       const linkBtn=createEntryLinkButton({
         onClick:()=>{
           hideInventoryContextMenu();
@@ -9797,6 +9784,7 @@ function openConsumableModal(charKey){
       qtyDiv.appendChild(pill);
       tools.appendChild(qtyDiv);
       row.appendChild(tools);
+      row.classList.add('has-qty');
       const activate=(ev)=>{
         if(ev.type==='keydown' && ev.key!=='Enter' && ev.key!==' ' && ev.key!=='Spacebar'){ return; }
         ev.preventDefault();
@@ -9880,6 +9868,7 @@ function openConsumableModal(charKey){
       useBtn.textContent='Use';
       tools.appendChild(useBtn);
       row.appendChild(tools);
+      row.classList.add('has-qty');
       const adjust=(delta)=>(ev)=>{
         if(ev.type==='keydown' && ev.key!=='Enter' && ev.key!==' ' && ev.key!=='Spacebar'){ return; }
         ev.preventDefault();
@@ -10176,6 +10165,7 @@ function openSupernaturalModal(charKey){
       hasTools=true;
     }
     if(gift.adv){
+      row.classList.add('has-entry-link');
       const linkBtn=createEntryLinkButton({
         onClick:()=>{
           giftsModal.classList.remove('open');
